load directives on index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     </inner-directive> 
   </outer-directive>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script type="text/javascript" src="js/directives/outerDirective.js"></script>
+  <script type="text/javascript" src="js/directives/innerDirective.js"></script>
 </body>
 </html>
