add app script tag to index.html and test loading of directives

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </inner-directive> 
   </outer-directive>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-  <script type="text/javascript" src="js/directives/outerDirective.js"></script>
-  <script type="text/javascript" src="js/directives/innerDirective.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/directives/outerDirective.js"></script>
+  <script src="js/directives/innerDirective.js"></script>
 </body>
 </html>
