--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title></title>
-</head>
-<body ng-app="app">
-  <outer-directive>
-    This will be transcluded into the template of the outerDirective directive.
-    <inner-directive>
-      This will be transcluded into the template of the innerDirective directive.
-    </inner-directive> 
-  </outer-directive>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/directives/outerDirective.js"></script>
-  <script src="js/directives/innerDirective.js"></script>
-</body>
+  <head>
+    <title></title>
+  </head>
+  <body ng-app="app">
+    
+    <outer-directive title="OuterDirective Template">
+      This will be transcluded into the template of the outerDirective directive.
+      <inner-directive title="InnerDirective Template">
+        This will be transcluded into the template of the innerDirective directive.
+      </inner-directive> 
+    </outer-directive>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/directives/outerDirective.js"></script>
+    <script src="js/directives/innerDirective.js"></script>
+
+  </body>
 </html>
